<resources>
    <string name="app_name">agregartarjeta</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="Titulo">informacion de tarjeta</string>
    <string name="numeroTarjeta">nu. Tarjeta</string>
    <string name="nombre">Nombre</string>
    <string name="mes">mes</string>
    <string name="CVV">CVV</string>
    <string name="año">AÑO</string>
    <string name="agregar">AGREGAR</string>
    <string name="guardar">guardar</string>
    <string name="apellido">Apellido</string>
    <string name="calleNum">Calle y Numero</string>
    <string name="ciudad">Ciudad</string>
    <string name="codigo">Codigo Postal</string>
    <string name="estado">Estado/Region</string>
    <string name="REG">Registrar</string>
    <string name="busca">Buscar</string>
    <string name="REGI">Tarjeta Registrada</string>
</resources>